@@ -14,6 +14,8 @@ $Id$
 
 6.6.0 Beta 6
 ============
+* [DanielPharos]: Try to save everything in a texturelist. Helps HL1 BSP MipTex saving.
+
 * [cdunde]: Added Quake 1 and Hexen II Specific items for Model Root in the Model Editor.
 
 * [DanielPharos]: Fixed SOF1 tools: they don't work with the proper slashes.
